# funwithrags

./: '  .gitignore  LICENSE  README.md  Untitled.ipynb  Untitled1.ipynb  document_split.py  fine_tune.py  fine_tune_gemma.py  generate_qa.py  hello.py  load_vectorstore.py  main.py  pyproject.toml  remove_linebreaks.py  search.py  search_v2.py  split_docs.json  visualize_emb.py
data/: a-skattelåneloven.txt  adgangsreguleringsloven.txt  administrativ-bistandsloven.txt  adoptionsloven.txt  adresseloven.txt  affalds-og-råstofafgiftsloven.txt  afskrivningsloven.txt  aftaleloven.txt  akkrediteringsloven.txt  aktieafgiftsloven.txt  aktieavancebeskatningsloven.txt  aktiesparekontoloven.txt  aktivloven.txt  almenboligloven.txt  almenlejeloven.txt  ambi-tilbagebetalingsloven.txt  amu-loven.txt  andelsboligloven.txt  anerkendelsesloven.txt  ansættelsesbevisloven.txt  anvisningsretsloven.txt  apotekerloven.txt  arbejderboligloven.txt  arbejdsmarkedsbidragsloven.txt  arbejdsmiljøloven.txt  arbejdsskadeafgiftsloven.txt  arbejdsskadesikringsloven.txt  arbejdstidsloven.txt  arkivloven.txt  arveloven.txt  atomanlægsloven.txt  atomskadeerstatningsloven.txt  atp-loven.txt  aub-loven.txt  auktionslederloven.txt  autorisationsloven.txt  avu-loven.txt  barselsloven.txt  barselsudligningsloven.txt  barseludligningsloven.txt  (+476 more)
data2/: eli-lta-1865-9999.txt  eli-lta-1871-25.txt  eli-lta-1872-56.txt  eli-lta-1873-69.txt  eli-lta-1873-71.txt  eli-lta-1873-72.txt  eli-lta-1874-39.txt  eli-lta-1875-44.txt  eli-lta-1876-157.txt  eli-lta-1882-59.txt  eli-lta-1894-84.txt  eli-lta-1894-88.txt  (+673 more)
src/: search.py  (+7 more)
(+4 files in other folders)
