[project]
name = "vector-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "datasets>=3.2.0",
    "einops>=0.8.0",
    "huggingface-hub>=0.27.1",
    "jupyter>=1.1.1",
    "langchain-chroma>=0.1.4",
    "langchain-community>=0.3.14",
    "langchain-huggingface>=0.1.2",
    "langchain-ollama>=0.2.2",
    "langchain-postgres>=0.0.12",
    "langgraph>=0.2.61",
    "libmagic>=1.0",
    "llama-index>=0.12.16",
    "llama-index-finetuning>=0.3.0",
    "llama-index-llms-ollama>=0.5.0",
    "numpy>=1.26.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "peft>=0.14.0",
    "plotly>=5.24.1",
    "psycopg2>=2.9.10",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "selenium>=4.27.1",
    "sentence-transformers>=3.4.0",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
    "unstructured>=0.16.12",
    "urllib3>=2.3.0",
]
